--- a/style.css
+++ b/style.css
@@ -18,21 +18,23 @@ h1 {
 }
 
 .site-links {
+    padding: 100px 0;
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-around;
-    padding: 20px;
+    justify-content: center;
+    gap: 60px;
 }
 
 .site-link {
+    width: 300px;
     text-decoration: none;
     color: #333;
     background-color: white;
     border-radius: 10px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    overflow: hidden;
-    margin: 20px;
+    box-shadow: 0 0 15px 1px rgba(0, 0, 0, 0.2);
     transition: box-shadow 0.3s;
+    overflow: hidden;
+
 }
 
 .site-link:hover {
@@ -40,9 +42,11 @@ h1 {
 }
 
 .site-link img {
-    width: 100%;
+    width: 300px;
     height: 200px;
     object-fit: cover;
+
+
 }
 
 .site-link h2 {
